[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meok-uae-rta-transport-mcp"
version = "1.0.0"
description = "UAE Federal Transport + Emirate RTA compliance — Federal Decree-Law 38/2022 driver hours, mid-day heat ban, Tasjeel/Shamil inspection, GSO dangerous goods, Tawteen Emiratisation, RTA audit prep, GCC cross-border transit. MENA logistics callable toolkit. By MEOK AI Labs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nicholas Templeman", email = "nicholas@meok.ai" }]
keywords = ["mcp", "uae", "rta", "dubai", "abu-dhabi", "tasjeel", "salik", "gcc", "tawteen", "emiratisation", "heat-ban", "dangerous-goods", "gso", "mena-compliance", "transport", "haulage", "meok"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Financial",
]
dependencies = ["mcp[cli]>=1.3.0"]

[project.urls]
Homepage = "https://haulage.app"
Repository = "https://github.com/CSOAI-ORG/meok-uae-rta-transport-mcp"

[project.scripts]
meok-uae-rta-transport-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]


[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_Configs = true
disallow_untyped_defs = true

